# FATso

./: README.md  TarefaTrabalho.md
fat16tool/: CMakeLists.txt  Makefile  fat16tool
fat16tool/include/: directory_entry.hpp  fat16_image.hpp  utils.hpp
fat16tool/src/: fat16_image.cpp  main.cpp  utils.cpp
imagens disco/: disco1.img
